--- a/src/app/components/evento-form/evento-form.scss
+++ b/src/app/components/evento-form/evento-form.scss
@@ -103,7 +103,7 @@
 
     .btn-primary {
         background-color: var(--primary);
-        color: white;
+        color: darken(#2E86AB, 10%);;
         border: 2px solid var(--primary);
         font-weight: bold;
 
