Iconos MQ Navbar

--- a/src/app/components/eventos-feed/eventos-feed.html
+++ b/src/app/components/eventos-feed/eventos-feed.html
@@ -6,7 +6,7 @@
     <title>Eventos Universitarios</title>
 </head>
 <body>
-    <h1>Eventos 🎉</h1>
+    <h1>Eventos 📅</h1>
     <div class="platform-container">
         <div class="post-feed-container">
             <div class="header">
